--- a/LV/main/Email.apk/res/values-lv/arrays.xml
+++ b/LV/main/Email.apk/res/values-lv/arrays.xml
@@ -10,6 +10,6 @@
     <string-array name="general_preference_auto_advance_summary_array">
         <item>"Rādīt jsunāko ziņojumu ekrānu pēc ziņojuma dzēšanas"</item>
         <item>"Rādīt jsunāko ziņojumu ekrānu pēc ziņojuma dzēšanas"</item>
-        <item>"Rādīt ziņojumu saraksta ekrānu pēc ziņojuma dzēšanasS"</item>
+        <item>"Rādīt ziņojumu saraksta ekrānu pēc ziņojuma dzēšanas"</item>
     </string-array>
 </resources>
